--- a/package.json
+++ b/package.json
@@ -1,72 +1,35 @@
 {
-  "name": "anuniui",
+  "name": "@ano-uni/monorepo",
   "version": "0.0.0",
+  "private": true,
+  "packageManager": "pnpm@7.2.1",
   "scripts": {
-    "dev:app": "uni -p app",
-    "dev:custom": "uni -p",
-    "dev:h5": "uni",
-    "dev:h5:ssr": "uni --ssr",
-    "dev:mp-alipay": "uni -p mp-alipay",
-    "dev:mp-baidu": "uni -p mp-baidu",
-    "dev:mp-kuaishou": "uni -p mp-kuaishou",
-    "dev:mp-lark": "uni -p mp-lark",
-    "dev:mp-qq": "uni -p mp-qq",
-    "dev:mp-toutiao": "uni -p mp-toutiao",
-    "dev:mp-weixin": "uni -p mp-weixin",
-    "dev:quickapp-webview": "uni -p quickapp-webview",
-    "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
-    "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
-    "build:app": "uni build -p app",
-    "build:custom": "uni build -p",
-    "build:h5": "uni build",
-    "build:h5:ssr": "uni build --ssr",
-    "build:mp-alipay": "uni build -p mp-alipay",
-    "build:mp-baidu": "uni build -p mp-baidu",
-    "build:mp-kuaishou": "uni build -p mp-kuaishou",
-    "build:mp-lark": "uni build -p mp-lark",
-    "build:mp-qq": "uni build -p mp-qq",
-    "build:mp-toutiao": "uni build -p mp-toutiao",
-    "build:mp-weixin": "uni build -p mp-weixin",
-    "build:quickapp-webview": "uni build -p quickapp-webview",
-    "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
-    "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "dev": "pnpm stub",
+    "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
+    "play:mp-weixin": "npm -C playground run dev:mp-weixin",
+    "build:mp-weixin": "npm -C playground run build:mp-weixin",
+    "play:h5": "npm -C playground run dev:h5",
+    "build:h5": "npm -C playground run build:h5",
+    "release": "bumpp package.json packages/**/package.json",
+    "stub": "pnpm -r --filter=./packages/* --parallel run stub",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "nr lint --fix"
-  },
-  "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060420220922001",
-    "vue": "^3.2.39",
-    "vue-demi": "^0.13.11",
-    "vue-i18n": "^9.2.2"
+    "lint:fix": "nr lint --fix",
+    "test": "vitest",
+    "test:update": "vitest -u"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
-    "@dcloudio/types": "^3.0.15",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060420220922001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060420220922001",
-    "@iconify-json/carbon": "^1.1.8",
-    "@iconify-json/mdi": "^1.1.33",
-    "@types/node": "^18.7.22",
+    "@types/node": "^18.7.23",
+    "bumpp": "^8.2.1",
     "eslint": "^8.24.0",
-    "postcss": "^8.4.16",
-    "terser": "^5.15.0",
-    "typescript": "^4.8.3",
-    "unocss": "^0.45.23",
+    "esno": "^0.16.3",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.4",
+    "unbuild": "^0.8.11",
+    "unocss": "^0.45.25",
     "unocss-applet": "^0.2.12",
-    "unplugin-auto-import": "^0.11.2",
-    "vite": "^3.1.3"
+    "vite": "^3.1.3",
+    "vitest": "^0.23.4"
   }
 }
