--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,9 +1,29 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "lib": ["esnext", "dom"],
+    "baseUrl": ".",
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
     "paths": {
-      "ano-uni": ["./packages/ano-uni/src/index.ts"]
-    }
+      "~/*": [
+        "src/*"
+      ]
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "esnext",
+    "types": [
+      "@dcloudio/types",
+      "vite/client"
+    ]
   }
 }
