--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "pnpm stub",
     "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
-    "play:mp-weixin": "npm -C playground run dev:mp-weixin",
+    "play:mp-weixin": "pnpm dev && npm -C playground run dev:mp-weixin",
     "build:mp-weixin": "npm -C playground run build:mp-weixin",
     "play:h5": "npm -C playground run dev:h5",
     "build:h5": "npm -C playground run build:h5",
@@ -28,7 +28,7 @@
     "typescript": "^4.8.4",
     "unbuild": "^0.8.11",
     "unocss": "^0.45.25",
-    "vite": "^3.1.3",
+    "vite": "^3.1.4",
     "vitest": "^0.23.4"
   }
 }
