--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ano-uni/monorepo",
+  "name": "@ano-ui/monorepo",
   "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@7.2.1",
