--- a/playground/package.json
+++ b/playground/package.json
@@ -48,8 +48,8 @@
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@ano-uni/components": "workspace:*",
-    "@ano-uni/preset": "workspace:*",
+    "@ano-ui/components": "workspace:*",
+    "@ano-ui/preset": "workspace:*",
     "@dcloudio/types": "^3.0.15",
     "@dcloudio/uni-automator": "3.0.0-alpha-3060420220922004",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060420220922004",
