--- a/playground/src/manifest.json
+++ b/playground/src/manifest.json
@@ -6,7 +6,7 @@
   "versionCode": "100",
   "transformPx": false,
   "mp-weixin": {
-    "appid": "wx59f6a03a5fe180ac",
+    "appid": "wx34c53cdf4e901def",
     "setting": {
       "urlCheck": false,
       "es6": true,
