--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,29 +1,11 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noImplicitAny": false,
     "paths": {
-      "~/*": [
-        "src/*"
-      ]
-    },
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "esnext",
-    "types": [
-      "@dcloudio/types",
-      "vite/client"
-    ]
-  }
+      "~/*": ["src/*"]
+    }
+  },
+  "exclude": ["**/dist/**"],
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue", "**/*.tsx"]
 }
