feat(preset): use global context

--- a/packages/preset/package.json
+++ b/packages/preset/package.json
@@ -35,5 +35,8 @@
   "scripts": {
     "build": "unbuild",
     "stub": "unbuild --stub"
+  },
+  "dependencies": {
+    "@unocss/preset-mini": "^0.45.25"
   }
 }
