--- a/playground/package.json
+++ b/playground/package.json
@@ -53,6 +53,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060420220922004",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060420220922004",
     "@iconify-json/carbon": "^1.1.8",
+    "ano-ui": "workspace:*",
     "postcss": "^8.4.16",
     "sass": "^1.55.0",
     "unocss-applet": "^0.2.14"
