chore: use pinia to store dark status

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -5,6 +5,9 @@
     "baseUrl": ".",
     "isolatedModules": true,
     "noImplicitAny": false,
-    "sourceMap": true
+    "sourceMap": true,
+    "paths": {
+      "~/*": ["src/*"]
+    }
   }
 }
