--- a/playground/package.json
+++ b/playground/package.json
@@ -44,6 +44,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060420220922006",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060420220922006",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060420220922006",
+    "pinia": "^2.0.22",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "ano-ui": "workspace:*",
     "postcss": "^8.4.17",
     "sass": "^1.55.0",
-    "unocss-applet": "^0.2.14"
+    "unocss-applet": "^0.2.14",
+    "unplugin-auto-import": "^0.11.2"
   }
 }
