fix: npm publish missing files

--- a/packages/ano-ui/package.json
+++ b/packages/ano-ui/package.json
@@ -45,7 +45,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "*.d.ts"
+    "components"
   ],
   "scripts": {
     "build": "esno scripts/components.ts && unbuild",
