--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,6 +19,9 @@
     "uni-app"
   ],
   "scripts": {},
+  "peerDependencies": {
+    "vue": "^3.2.0"
+  },
   "dependencies": {
     "@ano-ui/utils": "workspace:*"
   }
