chore(playground): add necessary dependencies

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -8,6 +8,10 @@
     "sourceMap": true,
     "paths": {
       "~/*": ["src/*"]
-    }
+    },
+    "types": [
+      "vite/client",
+      "@dcloudio/types"
+    ]
   }
 }
