--- a/playground/package.json
+++ b/playground/package.json
@@ -44,18 +44,26 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060920221111002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060920221111002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060920221111002",
+    "ano-ui": "workspace:*",
     "pinia": "^2.0.23",
+    "vue": "^3.2.45",
+    "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
+    "@dcloudio/types": "^3.0.19",
     "@dcloudio/uni-automator": "3.0.0-alpha-3060920221111002",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060920221111002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060920221111002",
     "@iconify-json/carbon": "^1.1.9",
-    "ano-ui": "workspace:*",
+    "@types/node": "^18.11.9",
     "postcss": "^8.4.19",
     "sass": "^1.56.1",
+    "terser": "^5.15.1",
+    "typescript": "^4.8.4",
+    "unocss": "^0.46.5",
     "unocss-applet": "^0.2.18",
-    "unplugin-auto-import": "^0.11.4"
+    "unplugin-auto-import": "^0.11.4",
+    "vite": "^3.2.3"
   }
 }
