--- a/packages/preset/package.json
+++ b/packages/preset/package.json
@@ -37,6 +37,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@unocss/core": "^0.46.5",
     "@unocss/preset-mini": "^0.46.5"
   }
 }
