--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../tsconfig.json",
-  "exclude": ["**/dist/**"],
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue", "**/*.tsx"]
+  "exclude": ["**/dist/**", "./unocss.config.ts"],
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue", "**/*.tsx"],
+  "compilerOptions": {
+    "declaration": false,
+    "composite": false,
+    "outDir": "./dist"
+  }
 }
