--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -18,35 +18,26 @@
     "unocss-components",
     "uni-app"
   ],
+  "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/components/index.d.ts",
-      "require": "./dist/components.umd.cjs",
-      "import": "./dist/components.js"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./*": "./*"
   },
-  "main": "./dist/components.umd.cjs",
-  "module": "./dist/components.js",
-  "types": "./dist/components/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "vue-tsc --declaration --emitDeclarationOnly --skipLibCheck && vite build",
-    "stub": "vue-tsc --declaration --emitDeclarationOnly --skipLibCheck && vite build"
+    "build": "unbuild",
+    "stub": "unbuild --stub"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
-  },
-  "dependencies": {
-    "@ano-ui/preset": "workspace:*"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.18",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "unocss": "^0.48.0",
-    "vite": "^4.0.3",
-    "vue": "^3.2.45"
   }
 }
