--- a/packages/ano-ui/package.json
+++ b/packages/ano-ui/package.json
@@ -56,6 +56,7 @@
     "esno": "^0.16.3",
     "fs-extra": "^11.1.0",
     "unocss": "^0.48.0",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.3",
     "vue": "^3.2.45"
   }
