--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "pnpm stub",
     "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
-    "play:mp-weixin": "npm -C playground run dev:mp-weixin",
-    "build:mp-weixin": "npm -C playground run build:mp-weixin",
-    "play:h5": "npm -C playground run dev:h5",
-    "build:h5": "npm -C playground run build:h5",
+    "play:mp-weixin": "pnpm dev && npm -C playground run dev:mp-weixin",
+    "build:mp-weixin": "pnpm build && npm -C playground run build:mp-weixin",
+    "play:h5": "pnpm dev && npm -C playground run dev:h5",
+    "build:h5": "pnpm build && npm -C playground run build:h5",
     "release": "bumpp package.json packages/**/package.json",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "tsc --noEmit",
