--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
     "bumpp": "^8.2.1",
-    "eslint": "^8.30.0",
+    "eslint": "^8.31.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4",
     "unbuild": "^1.0.2",
-    "vitest": "^0.26.2"
+    "vitest": "^0.26.2",
+    "vue-tsc": "^1.0.8"
   }
 }
