--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -18,7 +18,25 @@
     "unocss-components",
     "uni-app"
   ],
-  "scripts": {},
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    },
+    "./*": "./*"
+  },
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "unbuild",
+    "stub": "unbuild --stub"
+  },
   "peerDependencies": {
     "vue": "^3.2.0"
   }
