--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -27,7 +27,7 @@
     },
     "./*": "./*"
   },
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
