--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:mp-weixin": "pnpm build && npm -C playground run build:mp-weixin",
     "play:h5": "pnpm dev && npm -C playground run dev:h5",
     "build:h5": "pnpm build && npm -C playground run build:h5",
-    "release": "bumpp package.json packages/**/package.json",
+    "release": "bumpp package.json packages/*/package.json",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
@@ -22,14 +22,14 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.0",
+    "@antfu/eslint-config": "^0.34.1",
     "bumpp": "^8.2.1",
     "eslint": "^8.31.0",
     "esno": "^0.16.3",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.0.5",
     "typescript": "^4.9.4",
-    "unbuild": "^1.0.2",
-    "vitest": "^0.26.2",
-    "vue-tsc": "^1.0.8"
+    "unbuild": "^1.1.1",
+    "vitest": "^0.27.1",
+    "vue-tsc": "^1.0.24"
   }
 }
