--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:mp-weixin": "pnpm build && npm -C playground run build:mp-weixin",
     "play:h5": "pnpm dev && npm -C playground run dev:h5",
     "build:h5": "pnpm build && npm -C playground run build:h5",
+    "play:app": "pnpm dev && npm -C playground run dev:app",
+    "build:app": "pnpm build && npm -C playground run build:app",
     "release": "bumpp package.json packages/*/package.json",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "tsc --noEmit",
@@ -19,17 +21,18 @@
     "test:update": "vitest -u"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.1",
+    "@antfu/eslint-config": "^0.35.1",
+    "@unocss/eslint-config": "^0.49.4",
     "bumpp": "^8.2.1",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "esno": "^0.16.3",
-    "rimraf": "^4.1.1",
-    "typescript": "^4.9.4",
+    "rimraf": "^4.1.2",
+    "typescript": "^4.9.5",
     "unbuild": "^1.1.1",
-    "vitest": "^0.27.3",
+    "vitest": "^0.28.4",
     "vue-tsc": "^1.0.24"
   }
 }
