--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
     "@unocss/eslint-config": "^0.49.4",
+    "@unocss/preset-mini": "^0.49.4",
     "bumpp": "^8.2.1",
     "eslint": "^8.33.0",
     "esno": "^0.16.3",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
     "unbuild": "^1.1.1",
+    "unocss": "^0.49.4",
     "vitest": "^0.28.4",
     "vue-tsc": "^1.0.24"
   }
