--- a/playground/package.json
+++ b/playground/package.json
@@ -32,39 +32,39 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3070120230203001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3070620230227001",
     "ano-ui": "workspace:*",
-    "pinia": "^2.0.30",
+    "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.2.11",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3070120230203001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3070120230203001",
-    "@iconify-json/carbon": "^1.1.14",
-    "@types/node": "^18.11.19",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3070620230227001",
+    "@iconify-json/carbon": "^1.1.16",
+    "@types/node": "^18.14.6",
+    "@uni-helper/vite-plugin-uni-components": "^0.0.3",
     "postcss": "^8.4.21",
-    "sass": "^1.58.0",
-    "terser": "^5.16.3",
+    "sass": "^1.58.3",
+    "terser": "^5.16.5",
     "typescript": "^4.9.5",
-    "unocss": "^0.49.4",
-    "unocss-applet": "^0.2.21",
-    "unplugin-auto-import": "^0.13.0",
-    "unplugin-vue-components": "^0.23.0",
-    "vite": "^4.1.1"
+    "unocss": "^0.50.4",
+    "unocss-applet": "^0.3.3",
+    "unplugin-auto-import": "^0.15.1",
+    "vite": "^4.1.4"
   }
 }
