--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.1",
-    "@unocss/eslint-config": "^0.49.4",
-    "bumpp": "^8.2.1",
-    "eslint": "^8.33.0",
+    "@antfu/eslint-config": "^0.36.0",
+    "@unocss/eslint-config": "^0.50.4",
+    "bumpp": "^9.0.0",
+    "eslint": "^8.35.0",
     "esno": "^0.16.3",
-    "rimraf": "^4.1.2",
+    "rimraf": "^4.3.1",
     "typescript": "^4.9.5",
-    "unbuild": "^1.1.1",
-    "unocss": "^0.49.4",
-    "vitest": "^0.28.4",
-    "vue-tsc": "^1.0.24"
+    "unbuild": "^1.1.2",
+    "unocss": "^0.50.4",
+    "vite": "^4.1.4",
+    "vitest": "^0.29.2",
+    "vue-tsc": "^1.2.0"
   }
 }
