--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,7 @@
 {
   "name": "playground",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
@@ -32,18 +33,18 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-components": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3071220230331002",
     "ano-ui": "workspace:*",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
@@ -52,19 +53,20 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.2.11",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3070620230227001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3070620230227001",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3071220230331002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3071220230331002",
     "@iconify-json/carbon": "^1.1.16",
-    "@types/node": "^18.14.6",
+    "@types/node": "^18.15.11",
     "@uni-helper/vite-plugin-uni-components": "^0.0.3",
+    "@uni-helper/vite-plugin-uni-pages": "^0.1.5",
     "postcss": "^8.4.21",
-    "sass": "^1.58.3",
-    "terser": "^5.16.5",
-    "typescript": "^4.9.5",
-    "unocss": "^0.50.4",
-    "unocss-applet": "^0.3.3",
-    "unplugin-auto-import": "^0.15.1",
-    "vite": "^4.1.4"
+    "sass": "^1.60.0",
+    "terser": "^5.16.8",
+    "typescript": "^5.0.3",
+    "unocss": "^0.50.6",
+    "unocss-applet": "^0.3.8",
+    "unplugin-auto-import": "^0.15.2",
+    "vite": "^4.2.1"
   }
 }
