--- a/playground/package.json
+++ b/playground/package.json
@@ -62,6 +62,7 @@
     "@uni-helper/vite-plugin-uni-pages": "^0.1.6",
     "postcss": "^8.4.21",
     "sass": "^1.61.0",
+    "std-env": "^3.3.2",
     "terser": "^5.16.8",
     "typescript": "^5.0.4",
     "unocss": "^0.50.8",
