--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ano-ui",
-  "version": "0.6.12",
+  "version": "0.6.13-beta.0",
   "packageManager": "pnpm@8.3.1",
   "author": "Neil Lee <zguolee@foxmail.com>",
   "license": "MIT",
