refactor: move `shortcuts` to `component` (#51)
* refactor: move button shortcuts to component

* chore: styles build

* chore: mp build script

* refactor: move cell shortcuts to component

* refactor: move popup and transition shortcuts to component

* refactor: move checkbox, field, radio and switch shortcuts to component

* refactor: move shortcuts to component

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   ],
   "scripts": {
     "dev": "pnpm stub",
-    "build": "rimraf dist & esno build/components.ts & unbuild",
+    "build": "rimraf dist & esno build/components.ts & unbuild & unocss & pnpm build:mp",
+    "build:mp": "unocss -c unocss.config.mp.ts",
     "stub": "unbuild --stub",
     "release": "bumpp package.json ./src/ano-ui/*/package.json",
     "dev:app": "uni -p app",
@@ -105,16 +106,17 @@
     "@types/node": "^18.16.0",
     "@uni-helper/vite-plugin-uni-components": "^0.0.5",
     "@uni-helper/vite-plugin-uni-pages": "^0.1.8",
+    "@unocss/cli": "^0.51.8",
     "@unocss/eslint-config": "^0.50.8",
     "bumpp": "^9.1.0",
     "eslint": "^8.39.0",
     "esno": "^0.16.3",
     "fs-extra": "^11.1.1",
-    "postcss": "^8.4.23",
     "plop": "^3.1.2",
+    "postcss": "^8.4.23",
     "rimraf": "^4.4.1",
-    "scule": "^1.0.0",
     "sass": "^1.62.0",
+    "scule": "^1.0.0",
     "unbuild": "^1.2.1",
     "unocss": "^0.50.8",
     "unocss-applet": "^0.4.3",
