--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ano-ui",
-  "version": "0.6.13-beta.0",
+  "version": "0.7.0",
   "author": "Neil Lee <zguolee@foxmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/ano-ui/ano-ui#readme",
