--- a/package.json
+++ b/package.json
@@ -77,18 +77,19 @@
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3071320230417001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-jd": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080220230428001",
     "@unocss/preset-mini": "^0.50.8",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
@@ -97,13 +98,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
-    "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3071320230417001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3071320230417001",
+    "@dcloudio/types": "^3.3.3",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080220230428001",
     "@iconify-json/tabler": "^1.1.74",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^18.16.0",
+    "@types/node": "^18.16.2",
     "@uni-helper/vite-plugin-uni-components": "^0.0.5",
     "@uni-helper/vite-plugin-uni-pages": "^0.1.8",
     "@unocss/cli": "^0.51.8",
@@ -115,14 +117,14 @@
     "plop": "^3.1.2",
     "postcss": "^8.4.23",
     "rimraf": "^4.4.1",
-    "sass": "^1.62.0",
+    "sass": "^1.62.1",
     "scule": "^1.0.0",
     "unbuild": "^1.2.1",
     "unocss": "^0.50.8",
-    "unocss-applet": "^0.4.3",
+    "unocss-applet": "^0.4.4",
     "unplugin-auto-import": "^0.15.3",
-    "vite": "^4.3.1",
+    "vite": "^4.3.3",
     "vitest": "^0.29.8",
-    "vue-tsc": "^1.4.4"
+    "vue-tsc": "^1.6.1"
   }
 }
