--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "nr lint --fix",
-    "test": "vitest",
-    "test:update": "vitest -u"
+    "lint:fix": "pnpm lint --fix",
+    "new": "plop component"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -33,7 +32,9 @@
     "eslint": "^8.39.0",
     "esno": "^0.16.3",
     "fs-extra": "^11.1.1",
+    "plop": "^3.1.2",
     "rimraf": "^5.0.0",
+    "scule": "^1.0.0",
     "typescript": "^5.0.4",
     "unbuild": "^1.2.1",
     "unocss": "^0.51.8",
