--- a/packages/ano-ui/package.json
+++ b/packages/ano-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ano-ui",
   "type": "module",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "",
   "author": "Neil Lee <zguolee@foxmail.com>",
   "license": "MIT",
@@ -39,7 +39,9 @@
       "components"
     ]
   },
-  "files": ["src"],
+  "files": [
+    "src"
+  ],
   "scripts": {
     "build": "esno build/components.ts && unbuild",
     "stub": "esno build/components.ts && unbuild --stub"
