--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -56,7 +56,9 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080220230428001",
     "@iconify-json/tabler": "^1.1.74",
     "@types/node": "^18.16.4",
+    "@uni-helper/uni-env": "^0.0.3",
     "@uni-helper/vite-plugin-uni-components": "^0.0.6",
+    "@uni-helper/vite-plugin-uni-manifest": "^0.1.3",
     "@uni-helper/vite-plugin-uni-pages": "^0.1.8",
     "postcss": "^8.4.23",
     "sass": "^1.62.1",
