fix: release npm package

--- a/packages/ano-ui/package.json
+++ b/packages/ano-ui/package.json
@@ -33,14 +33,11 @@
   "publishConfig": {
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
-    "files": [
-      "dist",
-      "components"
-    ]
+    "types": "./dist/index.d.ts"
   },
   "files": [
-    "src"
+    "dist",
+    "components"
   ],
   "scripts": {
     "build": "esno build/components.ts && unbuild",
