--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "pnpm stub",
-    "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
+    "build": "rimraf --glob packages/*/dist && pnpm -r --filter=./packages/* run build && pnpm -r run build-post",
     "play:mp-weixin": "npm -C packages/playground run dev:mp-weixin",
     "build:mp-weixin": "pnpm build && npm -C packages/playground run build:mp-weixin",
     "play:h5": "npm -C packages/playground run dev:h5",
