--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "release": "bumpp package.json packages/*/package.json",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "vue-tsc --noEmit -p ./packages/ano-ui && vue-tsc --noEmit -p ./packages/playground",
-    "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
-    "new": "plop component"
+    "lint": "eslint . --fix",
+    "new": "plop component",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -39,6 +41,7 @@
     "unbuild": "^1.2.1",
     "unocss": "^0.51.8",
     "vite": "^4.3.5",
+    "vitepress": "1.0.0-beta.1",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
   }
