--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
 
+      - name: PNPM build
+        run: pnpm run build
+
       - name: Lint
         run: pnpm run lint
 
