--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,7 @@
     "docs"
   ],
   "scripts": {
-    "dev": "vitepress dev --port 9999 --open --host",
+    "dev": "vitepress dev --port 9999 --host",
     "build": "vitepress build",
     "serve": "vitepress serve"
   },
