--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,11 @@
   },
   "i18n-ally.localesPaths": [],
   "unocss.root": [
+    "./docs",
     "packages/ano-ui",
     "packages/playground"
+  ],
+  "github-actions.workflows.pinned.workflows": [
+    ".github/workflows/check.yml"
   ]
 }
