--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
 
+      - name: PNPM build
+        run: pnpm run build
+
       - name: Lint
         run: pnpm run lint
 
@@ -56,6 +59,9 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm i
+
+      - name: PNPM build
+        run: pnpm run build
 
       - name: TypeCheck
         run: pnpm run typecheck
@@ -88,6 +94,9 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm i
+
+      - name: PNPM build
+        run: pnpm run build
 
       - name: Build
         run: pnpm run ${{ matrix.build_cmd }}
