--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "play:mp-weixin": "npm -C packages/playground run dev:mp-weixin",
     "build:mp-weixin": "pnpm build && npm -C packages/playground run build:mp-weixin",
     "play:h5": "npm -C packages/playground run dev:h5",
-    "build:h5": "pnpm build && npm -C packages/playground run build:h5",
+    "build:h5": "npm -C packages/playground run build:h5",
     "play:app": "npm -C packages/playground run dev:app",
-    "build:app": "pnpm build && npm -C packages/playground run build:app",
+    "build:app": "npm -C packages/playground run build:app",
     "release": "bumpp package.json packages/*/package.json",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "typecheck": "vue-tsc --noEmit -p ./packages/ano-ui && vue-tsc --noEmit -p ./packages/playground",
-    "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
-    "new": "plop component"
+    "lint": "eslint . --fix",
+    "new": "plop component",
+    "docs:dev": "npm -C docs run dev",
+    "docs:build": "npm -C docs run build",
+    "docs:preview": "npm -C docs run serve",
+    "build:all": "pnpm build && pnpm build:h5 && pnpm docs:build && esno scripts/uni.ts"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -28,6 +31,7 @@
     "@types/node": "18.16.4",
     "@uni-helper/vite-plugin-uni-components": "^0.0.6",
     "@unocss/eslint-config": "^0.51.8",
+    "@vue/tsconfig": "^0.4.0",
     "bumpp": "^9.1.0",
     "eslint": "^8.39.0",
     "esno": "^0.16.3",
@@ -39,6 +43,7 @@
     "unbuild": "^1.2.1",
     "unocss": "^0.51.8",
     "vite": "^4.3.5",
+    "vitepress": "1.0.0-beta.1",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
   }
