--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:h5": "npm -C example run build:h5",
     "dev:app": "npm -C example run dev:app",
     "build:app": "npm -C example run build:app",
-    "release": "bumpp package.json packages/*/package.json",
+    "release": "bumpp package.json packages/*/package.json example/package.json",
     "typecheck": "vue-tsc --noEmit -p ./packages/ano-ui && vue-tsc --noEmit -p ./packages/preset && vue-tsc --noEmit -p ./example",
     "lint": "eslint . --fix",
     "docs:dev": "npm -C docs run dev",
